--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "Exciting tours for adventurous people",
   "main": "index.js",
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w"
+    "watch:sass": "node-sass sass/main.scss css/style.css -w",
+    "devserver": "live-server",
+    "start": "npm-run-all --parallel devserver watch:sass",
+    "compile:sass": "node-sass sass/main.scss css/style.comp.css",
+    "concat:css": "concat -o css/style.concat.css css/icon-font.css css/style.comp.css",
+    "prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.concat.css -o css/style.prefix.css",
+    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "build:css": "npm-run-all compile:sass concat:css prefix:css compress:css"
   },
   "repository": {
     "type": "git",
@@ -16,8 +23,14 @@
     "url": "https://github.com/MateenCode/Natours/issues"
   },
   "homepage": "https://github.com/MateenCode/Natours#readme",
-  "dependencies": {},
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "autoprefixer": "^7.1.4",
+    "concat": "^1.0.3",
+    "node-sass": "^4.5.3",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^4.1.1"
+  },
+  "dependencies": {
+    "live-server": "^1.2.1"
   }
 }
